--- a/index.html
+++ b/index.html
@@ -22,9 +22,24 @@
     <section id="home">
         <h2>что это такое Web 3.0 ?</h2>
         <img src="web3.jpg" alt="Illustration of Web 3.0">
+        <p>
+            Интернет постоянно развивается и внедряет инновации. 
+            Нам уже довелось увидеть два предыдущих поколения — Web 1.0 и 2.0, и мы жаждем узнать, что преподнесет Web 3.0. 
+            Опыт работы в Web 1.0 был статичным и лишенным возможности создавать собственные сайты с разнообразным контентом подобно тому, как мы делаем это сегодня. 
+            Версия Web 2.0 объединила пользователей с помощью социальных сетей и динамических сайтов, при этом пожертвовав децентрализацией.
+
+            Концепция Web 3.0 же обещает предоставить полный контроль над информацией в интернете, а также создать семантическую сеть, 
+            которая позволит программам легко воспринимать и обрабатывать пользовательский контент. 
+            Технология блокчейна обеспечит децентрализацию, бесплатную цифровую идентификацию с помощью криптокошельков и открытую цифровую экономику.
+
+            Способы взаимодействия с сетью обещают стать более захватывающими благодаря возможностям 3D-интерфейса. 
+            Помимо этого пользователи ожидают удобный поиск контента, таргетированную рекламу и улучшенную поддержку клиентов. 
+            Некоторые из технологий Web 3.0 уже широко используются в голосовых помощниках, таких как Siri и Alexa, а также в умных домах.
+        </p>
+        <img src="web3_intro.jpg" alt="introduction of Web 3.0">
         <p>Web 3.0 — это интернет-технология нового поколения, 
             которая опирается на машинное обучение, искусственный интеллект (ИИ) и технологию блокчейн.
-            онцепция направлена на создание открытых, связанных, умных сайтов и приложений с улучшенным машинным анализом данных.
+            концепция направлена на создание открытых, связанных, умных сайтов и приложений с улучшенным машинным анализом данных.
         </p>
         <h2>Основные характеристики Web 3.0</h2>
         <p>Прозрачность. Открытый исходный код позволяет видеть, 
@@ -41,6 +56,27 @@
         </p>
         <p>
             Основная цель развития этой версии — сделать интернет полезнее и удобнее для каждого.
+        </p>
+
+        <h2>Как работает Web 3.0</h2>
+        <p>
+            Web 3.0 будет быстро предоставлять персонализированную и актуальную информацию за счет использования искусственного интеллекта и передовых методов машинного обучения. 
+            Эффективные алгоритмы поиска и развитие аналитики данных позволят компьютерам лучше понимать потребности пользователей и рекомендовать подходящий контент. 
+            Web 3.0 также сосредоточится на защите прав собственности на контент и поддержке доступной цифровой экономики.
+            Сейчас сайты, например форумы и социальные сети, обычно содержат статическую информацию или ориентированный на пользователя контент. 
+            Хотя такая структура и позволяет публиковать информацию широкому кругу людей, она может не отвечать потребностям конкретного пользователя. 
+            Сайт должен адаптировать информацию, которую он предоставляет каждому отдельному пользователю, подобно тому, как это происходит в реальном человеческом общении. 
+            В Web 2.0 пользователи теряют право собственности и контроль над информацией, как только она оказывается в сети.
+
+            Еще одна ключевая фигура в концепции Web 3.0 — ученый-компьютерщик и создатель Всемирной паутины Тим Бернерс-Ли. Он предложил свое видение интернета будущего еще в 1999 году:
+
+            «У меня есть мечта, чтобы паутина (состоящая из компьютеров) могла анализировать все данные в интернете, включая контент, ссылки и транзакции между людьми и компьютерами. 
+            «Семантическая паутина», которая делает это возможным еще не появилась, но когда это произойдет, повседневные механизмы торговли, 
+            бюрократия и наша повседневная жизнь будет обрабатываться машинами, которые взаимодействуют между собой.»
+
+            Бернерс-Ли и Гэвин Вуд объединили свои идеи, чтобы сделать океан децентрализованной информации более доступным для сайтов и приложений. 
+            Они будут анализировать и использовать эту информацию для удовлетворения потребностей конкретных пользователей. 
+            Блокчейн служит решением для справедливого управления онлайн-идентификацией, данными и правом собственности.
         </p>
     </section>
 
