--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             Помимо этого пользователи ожидают удобный поиск контента, таргетированную рекламу и улучшенную поддержку клиентов. 
             Некоторые из технологий Web 3.0 уже широко используются в голосовых помощниках, таких как Siri и Alexa, а также в умных домах.
         </p>
-        <img src="web3_intro.jpg" alt="introduction of Web 3.0">
+        <img src="web3_intro.jpg" alt="Introduction of Web 3.0">
         <p>Web 3.0 — это интернет-технология нового поколения, 
             которая опирается на машинное обучение, искусственный интеллект (ИИ) и технологию блокчейн.
             концепция направлена на создание открытых, связанных, умных сайтов и приложений с улучшенным машинным анализом данных.
