--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
 
     <section id="technologies">
         <h2>Основные технологии</h2>
+        <img src="seb.jpg" alt="Technologies of Web 3.0">
         <ul>
             <li>Blockchain</li>
             <li>Smart Contracts</li>
