--- a/index.html
+++ b/index.html
@@ -35,11 +35,6 @@
             Способы взаимодействия с сетью обещают стать более захватывающими благодаря возможностям 3D-интерфейса. 
             Помимо этого пользователи ожидают удобный поиск контента, таргетированную рекламу и улучшенную поддержку клиентов. 
             Некоторые из технологий Web 3.0 уже широко используются в голосовых помощниках, таких как Siri и Alexa, а также в умных домах.
-            <video width="640" height="360" controls>
-                <source src="https://yandex.ru/video/preview/680860412980638529" type="video/mp4">
-                <source src="https://yandex.ru/video/preview/680860412980638529" type="video/ogg">
-                <source src="https://yandex.ru/video/preview/680860412980638529" type="video/webm">
-            </video>
         </p>
         <img src="web3_intro.jpg" alt="Introduction of Web 3.0">
         <p>Web 3.0 — это интернет-технология нового поколения, 
@@ -61,6 +56,7 @@
         </p>
         <p>
             Основная цель развития этой версии — сделать интернет полезнее и удобнее для каждого.
+            <a href="https://yandex.ru/video/preview/680860412980638529" target="_blank">ссыла на видео</a>
         </p>
 
         <h2>Как работает Web 3.0</h2>
