--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         </p>
         <p>
             Основная цель развития этой версии — сделать интернет полезнее и удобнее для каждого.
-            <a href="https://yandex.ru/video/preview/680860412980638529" target="_blank">ссыла на видео</a>
+            <a href="https://yandex.ru/video/preview/680860412980638529" target="_blank" class="video-link">ссыла на видео</a>
         </p>
 
         <h2>Как работает Web 3.0</h2>
